--- a/Web.Statu/Views/Insolvence/Rizeni.cshtml
+++ b/Web.Statu/Views/Insolvence/Rizeni.cshtml
@@ -252,7 +252,7 @@ else
                     }
                     else
                     {
-                        docs.Add(doc, HlidacStatu.Lib.ES.Highlighter.HasHighlightedContent(highlightingData, "dokumenty.plainText", doc.PlainText) ? "1" : "0");
+                        docs.Add(doc, HlidacStatu.Lib.Search.Highlighter.HasHighlightedContent(highlightingData, "dokumenty.plainText", doc.PlainText) ? "1" : "0");
                     }
                 }
 
