--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -267,7 +267,7 @@
     <td style="font-size:11px;letter-spacing: -0.4px;line-height:11px;">
         @if (rec.Classification?.Types?.Count() > 0)
         {
-            foreach (var cl in rec.Classification.Types)
+            foreach (var cl in rec.Classification.Types.OrderByDescending(m=>m.ClassifProbability))
             {
             <div style=""><b>@(cl.ClassifType().ToNiceDisplayName())</b>&nbsp;-&nbsp;@Html.Raw(cl.ClassifProbability.ToString("P4").Replace(" ","&nbsp;"))</div>
             }
