--- a/Web.Statu/Views/ApiV1/Index.cshtml
+++ b/Web.Statu/Views/ApiV1/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "API pro vývojáře";
     ViewBag.SubTitle = "Informace o našem API, datových strukturách a způsobech, jak získat obsah databáze hlidacstatu.cz";
-    System.IO.FileInfo fi = new FileInfo(HlidacStatu.Lib.StaticData.App_Data_Path + "dump\\smlouvy.dump.zip");
+    System.IO.FileInfo fi = new FileInfo(HlidacStatu.Lib.StaticData.Dumps_Path + "smlouvy.dump.zip");
 
 }
 @section scripts
