--- a/Web.Statu/Views/ApiV1/UX.cshtml
+++ b/Web.Statu/Views/ApiV1/UX.cshtml
@@ -4,7 +4,7 @@
 
     ViewBag.Title = "UX fragmenty";
     ViewBag.SubTitle = "UX fragmenty pro pouziti na strankach Hlidace";
-    System.IO.FileInfo fi = new FileInfo(HlidacStatu.Lib.StaticData.App_Data_Path + "dump\\smlouvy.dump.zip");
+    System.IO.FileInfo fi = new FileInfo(HlidacStatu.Lib.StaticData.Dumps_Path + "smlouvy.dump.zip");
 
 }
 @section scripts
