--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -523,46 +523,44 @@
 
 @helper DotaceHead()
 {
-<tr>
-    <th></th>
-    <th>Jméno příjemce</th>
-    <th>IČO příjemce</th>
-    <th>Projekt id</th>
-    <th>Název projektu</th>
-    <th>Datum podpisu</th>
-    <th>Celková částka</th>
-    <th>Z toho půjčka</th>
-</tr>
+    <tr>
+        <th></th>
+        <th>Jméno příjemce</th>
+        <th>IČO příjemce</th>
+        <th>Název projektu</th>
+        <th>Datum podpisu</th>
+        <th>Částka</th>
+    </tr>
 }
 
 @helper DotaceRow(System.Security.Principal.IPrincipal user, HttpRequestBase request, HlidacStatu.Lib.Data.Dotace.Dotace item, string query = "")
 {
-<tr>
-    <td>
-        @{
-            @Util.AddBookmark(user, item)
-        }
-    </td>
-    <td style="white-space: nowrap;">
-        @item.PrijemceJmenoPrijemce
-    </td>
-    <td>
-        @item.PrijemceIco
-    </td>
-    <td>
-        @item.DotaceProjektIdentifikator
-    </td>
-    <td>
-        @item.DotaceProjektNazev
-    </td>
-    <td>
-        @(item.DotacePodpisDatum?.Date.ToString("d.MM.yyyy") ?? "Neznámé")
-    </td>
-    <td>
-        @item.DotaceCelkem.ToString("0.##")
-    </td>
-    <td>
-        @item.PujckaCelkem
-    </td>
-</tr>
+    <tr>
+        <td>
+            @{
+                @Util.AddBookmark(user, item)
+            }
+        </td>
+        <td style="white-space: nowrap;">
+            @item.PrijemceJmenoPrijemce
+        </td>
+        <td>
+            @item.PrijemceIco
+        </td>
+        <td>
+            <a href="detail?idDotace=@item.IdDotace">@item.GetNazevDotace()</a>
+        </td>
+        <td>
+            @(item.DotacePodpisDatum?.Date.ToString("d.MM.yyyy") ?? "Neznámé")
+        </td>
+        <td>
+            @item.DotaceCelkem.ToString("### ### ### ### ###.##")
+
+            @if (item.PujckaCelkem > 0)
+            {
+                <br />
+                <p class="text-muted">z toho @item.PujckaCelkem je půjčka</p>
+            }
+        </td>
+    </tr>
 }
