--- a/Web.Statu/Views/Dotace/Index.cshtml
+++ b/Web.Statu/Views/Dotace/Index.cshtml
@@ -28,6 +28,8 @@
     </ol>
 }
 
+@Html.Partial("_SearchForm", new HlidacStatu.Lib.ES.DotaceSearchResult())
+
 @*@Html.Action("CachedAction_Child_48H", new { model = Model, NameOfView = "Index.Content" })*@
 
 @*<div class="row">
@@ -75,21 +77,26 @@
 <h2>Ukázky možností</h2>
 <ul>
     <li>
-        <a href="/dotace/hledat?Q=*">Naposledy změněná řízení</a>
+        <a href="/dotace/hledat?Q=ico:190489">Hledání podle IČO</a>
     </li>
-
+    <li>
+        <a href="/dotace/hledat?Q=jmeno:'Ředitelství silnic a dálnic ČR'">Hledání podle jména</a>
+    </li>
+    <li>
+        <a href="/dotace/hledat?Q=osobaid:andrej-babis">Hledání podle osoby</a>
+    </li>
+    
 </ul>
 
 
 
 
-<div class="bs-callout bs-callout-primary small">
+@*<div class="bs-callout bs-callout-primary small">
     <h4>Politici a jejich vazby na firmy</h4>
     <p>
         Pro nás relevantní vazba politika na firmu je, že daná osoba byla (spolu)majitelem firmy anebo působila ve statutárním orgánu společnosti v době,
         kdy byla udělena dotace firmě, kde osoba působila, nebo kde byl tento vztah nepřímý (tzn. firma s politikem vlastnila firmu B, ta firmu C, ktera spadla do insolvence)
     </p>
-</div>
+</div>*@
 
-@Html.Partial("_SearchForm", new HlidacStatu.Lib.ES.DotaceSearchResult())
 
