--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -137,6 +137,7 @@
         </div>
         <div class="footer__content__gap"></div>
         <div class="footer__content__col">
+            <a href="/texty/team">Team</a>
             <a href="https://www.darujme.cz/projekt/1200384">Finanční podpora</a>
             <a href="/api">API a Open data pro vývojáře</a>
             <a href="/texty/provoznipodminky/">Podmínky užívání a ochrana soukromí</a>
