--- a/Web.Statu/Views/Home/Osoba.cshtml
+++ b/Web.Statu/Views/Home/Osoba.cshtml
@@ -21,7 +21,17 @@
 
     ViewBag.HideTitle = true;
 
+    bool noIndex = HlidacStatu.Web.Controllers.HomeController.DontIndexOsoby.Contains(Model.NameId.ToLower());
 
+}
+
+@section metatags
+{
+
+    @if (HlidacStatu.Web.Controllers.HomeController.DontIndexOsoby.Contains(Model.NameId.ToLower()))
+    {
+        <meta name="robots" content="noindex, nofollow">
+    }
 }
 
 @section scripts
@@ -43,13 +53,13 @@
 }
 
 @*@Html.Action("Osoba_child", new { model = Model, auth = this.User.Identity.IsAuthenticated, aktualnost = aktualnost, NameOfView = "OsobaProfil" }) //+ (string.IsNullOrEmpty(Request.QueryString["beta"]) ? "" : "2")*@
-@Html.Action("CachedAction_Child_12H", new { model = Model, auth = this.User.Identity.IsAuthenticated, NameOfView = "OsobaProfil", param0 = Model.NameId, param1 = aktualnost.ToString() } )
+@Html.Action("CachedAction_Child_12H", new { model = Model, auth = this.User.Identity.IsAuthenticated, NameOfView = "OsobaProfil", param0 = Model.NameId, param1 = aktualnost.ToString() })
 
 <div style="margin-top:40px"></div>
 
 @if ((ostat.SoukromeFirmy.Count + ostat.StatniFirmy.Count) > 0)
 {
-    @Html.Action("CachedAction_Child_12H", new { model = Model, aktualnost = aktualnost, NameOfView = "OsobaProfil_Vazby", param0=Model.NameId, param1=aktualnost.ToString() } )
+    @Html.Action("CachedAction_Child_12H", new { model = Model, aktualnost = aktualnost, NameOfView = "OsobaProfil_Vazby", param0 = Model.NameId, param1 = aktualnost.ToString() })
 }
 
 
